First version of the website that showed more persistence for both quick and interactive modes

--- a/app/templates/interactive_step1.html
+++ b/app/templates/interactive_step1.html
@@ -8,7 +8,7 @@
   {% for question in questions %}
     <div class="mb-3">
       <label for="q{{ loop.index }}" class="form-label">
-        {{ loop.index }}. {{ question }}
+        {{ question }}
       </label>
       <textarea
         id="q{{ loop.index }}"
