Organizing the files and adding an "Open tone" for the quick optimization mode

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Home - MyApp{% endblock %}
+{% block title %}Prompt Optimization Web App{% endblock %}
 
 {% block content %}
 <div class="text-center">
-  <h1>Welcome to MyApp</h1>
+  <h1>Prompt Optimization Web App</h1>
   <p>Select a mode to get started:</p>
   <div class="d-grid gap-3 col-6 mx-auto">
     <a href="/quick" class="btn btn-primary btn-lg">Quick mode</a>
