--- a/app/templates/interactive_step1.html
+++ b/app/templates/interactive_step1.html
@@ -21,6 +21,6 @@
   {% endfor %}
 
   <button type="submit" class="btn btn-primary">Next</button>
-  <a href="{{ url_for('main.index') }}" class="btn btn-link">Back to Home</a>
+  <a href="{{ url_for('main.index') }}" class="btn btn-link">← Back to Home</a>
 </form>
 {% endblock %}
