--- a/app/templates/quick.html
+++ b/app/templates/quick.html
@@ -47,7 +47,7 @@
       />
     </div>
 
-    <button type="submit" class="btn btn-primary">Send</button>
+    <button type="submit" class="btn btn-lg text-white" style="background-color: #6c757d;">Send</button>
   </form>
 
   {% if response %}
@@ -68,8 +68,6 @@
       </div>
     </div>
   {% endif %}
-
-  <a href="{{ url_for('main.index') }}" class="btn btn-link">← Back to Home</a>
 </div>
 {% endblock %}
 
