--- a/app/templates/interactive_step2.html
+++ b/app/templates/interactive_step2.html
@@ -20,7 +20,6 @@
     </div>
   {% endfor %}
 
-  <button type="submit" class="btn btn-primary">Submit</button>
-  <a href="{{ url_for('main.index') }}" class="btn btn-link">← Back to Home</a>
+  <button type="submit" class="btn btn-lg text-white" style="background-color: #6c757d;">Submit</button>
 </form>
 {% endblock %}
