Just some small styling modifications

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,7 +55,7 @@
       <small>
         © <script>document.write(new Date().getFullYear())</script> Augusto Souza&nbsp;|&nbsp;
         <a href="https://github.com/augustosouza8/prompt-optimizer-web-app" class="text-light">GitHub Repo</a>&nbsp;|&nbsp;
-        Built with Flask &amp; and Bootstrap, powered by <a href="https://github.com/agno-agi/agno" class="text-light">Agno Multi-Agent</a>, and connected to an external <a href="https://huggingface.co/spaces/augustosouza/prompt-optimizer-mcp-server/tree/main" class="text-light">MCP server</a>
+        Built with Flask &amp; Bootstrap, powered by <a href="https://github.com/agno-agi/agno" class="text-light">Agno Multi-Agent</a>, and connected to an external <a href="https://huggingface.co/spaces/augustosouza/prompt-optimizer-mcp-server/tree/main" class="text-light">MCP server</a>
       </small>
     </div>
   </footer>
