Adding a favicon logo

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,12 @@
     integrity="sha384-..."
     crossorigin="anonymous"
   >
+
+<!--  favicon logo-->
+  <link rel="icon" sizes="16x16" href="{{ url_for('static', filename='favicon/icon16.png') }}">
+  <link rel="icon" sizes="32x32" href="{{ url_for('static', filename='favicon/icon32.png') }}">
+  <link rel="icon" sizes="48x48" href="{{ url_for('static', filename='favicon/icon48.png') }}">
+
 </head>
 <body class="d-flex flex-column min-vh-100">
 
